# ADV_PROJECTS

12_Core_Algo/: twopointer.py
chat/: chat_gui.py
frontend/: index.html  script.js  styles.css
frontend/Bekahs Baking/: index.html  script.js  styles.css
frontend/CS PORTFOLIO/: index.html  script.js  styles.css
frontend/KP_Portfolio/: index.html  script.js  styles.css
frontend/bekahs-baking/: package-lock.json  package.json
frontend/bekahs-baking/app/: globals.css  layout.tsx  page.tsx
physics/blackhole_sim/: CMakeLists.txt  README.md  main.cpp
webscraper/: reddit.py
